# rknn_mobilenet_object_classification

./: .gitignore  CMakeLists.txt  README.md  atk_mobilenet_object_classification.cpp  atk_mobilenet_object_classification.h
